--- a/AdventOfCode2022/AdventOfCode2022.fsproj
+++ b/AdventOfCode2022/AdventOfCode2022.fsproj
@@ -15,6 +15,7 @@
     <Compile Include="Day7.fs" />
     <Compile Include="Day8.fs" />
     <Compile Include="Day10.fs" />
+    <Compile Include="Day12.fs" />
   </ItemGroup>
 
   <ItemGroup>
