--- a/AdventOfCode2022/AdventOfCode2022.fsproj
+++ b/AdventOfCode2022/AdventOfCode2022.fsproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
+    <LangVersion>preview</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -16,6 +17,7 @@
     <Compile Include="Day8.fs" />
     <Compile Include="Day10.fs" />
     <Compile Include="Day12.fs" />
+    <Compile Include="Day13.fs" />
   </ItemGroup>
 
   <ItemGroup>
