--- a/AdventOfCode2022/AdventOfCode2022.fsproj
+++ b/AdventOfCode2022/AdventOfCode2022.fsproj
@@ -18,6 +18,7 @@
     <Compile Include="Day10.fs" />
     <Compile Include="Day12.fs" />
     <Compile Include="Day13.fs" />
+    <Compile Include="Day18.fs" />
     <Compile Include="Day21.fs" />
   </ItemGroup>
 
